--- a/portfolio.html
+++ b/portfolio.html
@@ -59,119 +59,157 @@
         <ul class="projects container">
           <li class="projects-items">
             <a class="link" href="">
-              <img src="./img/Технокряк.jpg" alt="Технокряк" />
+              <div class="box">
+                <img src="./img/Технокряк.jpg" alt="Технокряк" />
+                <div class="overlay">
+                <p class="text">
+                  Технокряк это современная площадка распространения коронавируса.
+                  Компании используют эту платформу для цифрового шпионажа и атак
+                  на защищённые сервера конкурентов.
+                </p>
+                </div>
+              </div>
               <h2 class="title">Технокряк</h2>
               <p class="subtitle">Веб-сайт</p>
-              <p class="text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
+              
             </a>
           </li>
           <li class="projects-items">
             <a class="link" href="">
+              <div class="box">
               <img
                 src="./img/Постер New Orlean vs Golden Stars.jpg"
                 alt="Постер New Orlean vs Golden Stars"
               />
+              <div class="overlay">
+              <p class="text">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+              </div>
+              </div>
               <h2 class="title">Постер New Orlean vs Golden Stars</h2>
               <p class="subtitle">Дизайн</p>
+            </a>
+          </li>
+          <li class="projects-items">
+            <a class="link" href="">
+              <div class="box">
+              <img src="./img/Ресторан Seafood.jpg" alt="Ресторан Seafood" />
+              <div class="overlay">
               <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
-            </a>
-          </li>
-          <li class="projects-items">
-            <a class="link" href="">
-              <img src="./img/Ресторан Seafood.jpg" alt="Ресторан Seafood" />
+              
+              </div>
+              </div>
               <h2 class="title">Ресторан Seafood</h2>
               <p class="subtitle">Приложение</p>
+            </a>
+          </li>
+          <li class="projects-items">
+            <a class="link" href="">
+              <div class="box">
+              <img src="./img/Проект Prime.jpg" alt="Проект Prime" />
+              <div class="overlay">
               <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
-            </a>
-          </li>
-          <li class="projects-items">
-            <a class="link" href="">
-              <img src="./img/Проект Prime.jpg" alt="Проект Prime" />
+              </div>
+              </div>
               <h2 class="title">Проект Prime</h2>
               <p class="subtitle">Маркетинг</p>
+            </a>
+          </li>
+          <li class="projects-items">
+            <a class="link" href="">
+              <div class="box">
+              <img src="./img/Проект Boxes.jpg" alt="Проект Boxes" />
+              <div class="overlay">
               <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
-            </a>
-          </li>
-          <li class="projects-items">
-            <a class="link" href="">
-              <img src="./img/Проект Boxes.jpg" alt="Проект Boxes" />
+              </div>
+              </div>
               <h2 class="title">Проект Boxes</h2>
               <p class="subtitle">Приложение</p>
-              <p class="text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
             </a>
           </li>
           <li class="projects-items">
             <a class="link" href="">
+              <div class="box">
               <img
                 src="./img/Inspiration has no Borders.jpg"
                 alt="Inspiration has no Borders"
               />
-              <h2 class="title">Inspiration has no Borders</h2>
-              <p class="subtitle">Веб-сайт</p>
+              <div class="overlay">
               <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
+              </div>
+              </div>
+              <h2 class="title">Inspiration has no Borders</h2>
+              <p class="subtitle">Веб-сайт</p>
             </a>
           </li>
           <li class="projects-items">
             <a class="link" href="">
+              <div class="box">
               <img
                 src="./img/Издание Limited Edition.jpg"
                 alt="Издание Limited Edition"
               />
+              <div class="overlay">
+              <p class="text">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+              </div>
+              </div>
               <h2 class="title">Издание Limited Edition</h2>
               <p class="subtitle">Дизайн</p>
+            </a>
+          </li>
+          <li class="projects-items">
+            <a class="link" href="">
+              <div class="box">
+              <img src="./img/Проект LAB.jpg" alt="Проект LAB" />
+              <div class="overlay">
               <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
-            </a>
-          </li>
-          <li class="projects-items">
-            <a class="link" href="">
-              <img src="./img/Проект LAB.jpg" alt="Проект LAB" />
+              </div>
+              </div>
               <h2 class="title">Проект LAB</h2>
               <p class="subtitle">Маркетинг</p>
-              <p class="text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
             </a>
           </li>
           <li class="projects-items">
             <a class="link" href="">
+              <div class="box">
               <img src="./img/Growing-Business.jpg" alt="Growing Business" />
-              <h2 class="title">Growing Business</h2>
-              <p class="subtitle">Приложение</p>
+              <div class="overlay">
               <p class="text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
+              </div>
+              </div>
+              <h2 class="title">Growing Business</h2>
+              <p class="subtitle">Приложение</p>
             </a>
           </li>
         </ul>
