--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <figure class="figure">
                 <img
                   src="./img/Growing-Business.jpg"
-                  alt="Десктопные приложения"
+                  alt="Десктопные приложения" class="product_img"
                 />
                 <figcaption class="product-list">
                   Десктопные приложения
@@ -145,7 +145,7 @@
               <figure class="figure">
                 <img
                   src="./img/Mobile-applications.jpg"
-                  alt="Мобильные приложения"
+                  alt="Мобильные приложения" class="product_img"
                 />
                 <figcaption class="product-list">
                   Мобильные приложения
@@ -157,7 +157,7 @@
               <figure class="figure">
                 <img
                   src="./img/Design-solutions.jpg"
-                  alt="Дизайнерские решения"
+                  alt="Дизайнерские решения" class="product_img"
                 />
                 <figcaption class="product-list">
                   Дизайнерские решения
