--- a/portfolio.html
+++ b/portfolio.html
@@ -69,9 +69,10 @@
                 </p>
                 </div>
               </div>
+              <div class="title-subtitle">
               <h2 class="title">Технокряк</h2>
               <p class="subtitle">Веб-сайт</p>
-              
+              </div>
             </a>
           </li>
           <li class="projects-items">
@@ -89,8 +90,10 @@
               </p>
               </div>
               </div>
+              <div class="title-subtitle">
               <h2 class="title">Постер New Orlean vs Golden Stars</h2>
               <p class="subtitle">Дизайн</p>
+              </div>
             </a>
           </li>
           <li class="projects-items">
@@ -106,8 +109,10 @@
               
               </div>
               </div>
+              <div class="title-subtitle">
               <h2 class="title">Ресторан Seafood</h2>
               <p class="subtitle">Приложение</p>
+              </div>
             </a>
           </li>
           <li class="projects-items">
@@ -122,8 +127,10 @@
               </p>
               </div>
               </div>
+              <div class="title-subtitle">
               <h2 class="title">Проект Prime</h2>
               <p class="subtitle">Маркетинг</p>
+              </div>
             </a>
           </li>
           <li class="projects-items">
@@ -138,8 +145,10 @@
               </p>
               </div>
               </div>
+              <div class="title-subtitle">
               <h2 class="title">Проект Boxes</h2>
               <p class="subtitle">Приложение</p>
+              </div>
             </a>
           </li>
           <li class="projects-items">
@@ -157,8 +166,10 @@
               </p>
               </div>
               </div>
+              <div class="title-subtitle">
               <h2 class="title">Inspiration has no Borders</h2>
               <p class="subtitle">Веб-сайт</p>
+              </div>
             </a>
           </li>
           <li class="projects-items">
@@ -176,8 +187,10 @@
               </p>
               </div>
               </div>
+              <div class="title-subtitle">
               <h2 class="title">Издание Limited Edition</h2>
               <p class="subtitle">Дизайн</p>
+              </div>
             </a>
           </li>
           <li class="projects-items">
@@ -192,8 +205,10 @@
               </p>
               </div>
               </div>
+              <div class="title-subtitle">
               <h2 class="title">Проект LAB</h2>
               <p class="subtitle">Маркетинг</p>
+              </div>
             </a>
           </li>
           <li class="projects-items">
@@ -208,8 +223,10 @@
               </p>
               </div>
               </div>
+              <div class="title-subtitle">
               <h2 class="title">Growing Business</h2>
               <p class="subtitle">Приложение</p>
+              </div>
             </a>
           </li>
         </ul>
